--- a/.github/workflows/python-blank.yml
+++ b/.github/workflows/python-blank.yml
@@ -1,23 +1,12 @@
-name: Python application
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.x"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Run tests
-      env:
-        PYTHONPATH: ${{ github.workspace }}
-      run: pytest -q
+- pipeline: python_application
+  name: Python application
+  actions:
+  - action: npm run build
+    type: BUILD
+    docker_image_name: library/node
+    docker_image_tag: 22
+    execute_commands:
+    - "# yarn install"
+    - npm install
+    - npm run build
+    shell: BASH
